Some initial styling

--- a/html/home_en_US.html
+++ b/html/home_en_US.html
@@ -1,25 +1,36 @@
 
 <md-content layout-xs="column" layout="row">
-    <div flex="60" layout="column">
+    <div flex="70" layout="column">
         <md-card class="default-card">
             <md-card-title>
                 <md-card-title-text>
-                    <span class="md-headline">How does this work?</span>
+                    <span class="md-headline">Using BobCat</span>
+                </md-card-title-text>
+            </md-card-title>
+            <md-card-content>
+
+              <p><strong>Books &amp; More</strong><br>Search for books, journals and other print materials, videos, sound recordings, e-books, e-journals, databases, and indexes in local libraries and special collections </p>
+              <p><strong>Articles &amp; Databases</strong><br>Find databases by title, get a list of databases within your subject area to search within, or search pre-selected groups of databases simultaneously&nbsp;</p>
+              <p><strong>Journals</strong><br>Search for journals and articles by citation or journal title&nbsp;</p>
+              <p><strong>Course Reserves</strong><br>Locate books and articles your instructor has placed on reserve at the Library</p>
+              <p>[<a href="http://nyu.beta.libanswers.com/website/search/?q=bobcat&amp;t=0" target="_blank">See BobCat FAQs</a>]</p>
+
+            </md-card-content>
+        </md-card>
+
+    </div>
+    <div flex-xs flex="30" layout="column">
+        <md-card class="default-card">
+            <md-card-title>
+                <md-card-title-text>
+                    <span class="md-headline">Where can I get help?</span>
                 </md-card-title-text>
             </md-card-title>
             <md-card-content>
                 <p>
-                    Primo provides simple, one-stop searching for books and e-books, videos, articles, digital media, and more.
+                    <a href="#">Ask a librarian</a> how to start your search
                 </p>
-                <p>
-                    Primo also helps you manage your research. Sign-in in order to:
-                </p>
-                <ul>
-                    <li>Renew books and videos</li>
-                    <li>Create favoriets lists</li>
-                    <li>Export citations to Refworks and Endnote Web</li>
-                    <li>View full search results. (Some databases, only show results when you're signed in.)</li>
-                </ul>
+
             </md-card-content>
         </md-card>
         <md-card class="default-card">
@@ -35,21 +46,6 @@
                         <md-icon md-svg-icon="./images/chevron-right.svg"></md-icon>
                     </prm-icon>
                 </a>
-            </md-card-content>
-        </md-card>
-    </div>
-    <div flex-xs flex="40" layout="column">
-        <md-card class="default-card">
-            <md-card-title>
-                <md-card-title-text>
-                    <span class="md-headline">Where can I get help?</span>
-                </md-card-title-text>
-            </md-card-title>
-            <md-card-content>
-                <p>
-                    <a href="#">Ask a librarian</a> how to start your search
-                </p>
-
             </md-card-content>
         </md-card>
     </div>
