Make homepage responsive better

--- a/html/home_en_US.html
+++ b/html/home_en_US.html
@@ -1,6 +1,6 @@
 
 <md-content layout-xs="column" layout="row">
-    <div flex="70" layout="column">
+    <div flex-xs="100" flex="70" layout="column">
         <md-card class="default-card">
             <md-card-title>
                 <md-card-title-text>
@@ -19,7 +19,7 @@
         </md-card>
 
     </div>
-    <div flex-xs flex="30" layout="column">
+    <div flex-xs="100" flex="30" layout="column">
         <md-card class="default-card">
             <md-card-title>
                 <md-card-title-text>
