--- a/html/prmLogoAfter.html
+++ b/html/prmLogoAfter.html
@@ -1,5 +1,3 @@
-<div class="product-logo product-logo-local" layout="row" layout-align="start center" layout-fill id="banner" tabindex="0" role="banner">
-  <md-button aria-label="{{::('nui.header.LogoAlt' | translate)}}" ng-click="$ctrl.navigation.navigateToHomePage()">
-    <img ng-src="{{$ctrl.getIconLink()}}" alt="{{::('nui.header.LogoAlt' | translate)}}"/>
-  </md-button>
+<div class="product-logo product-logo-local" layout="row" layout-align="start center" layout-fill id="banner" tabindex="0"  role="banner">
+  <a href="https://library.nyu.edu"><img class="logo-image" alt="{{::('nui.header.LogoAlt' | translate)}}" ng-src="{{$ctrl.getIconLink()}}"/></a>
 </div>
