--- a/html/chatWidget.html
+++ b/html/chatWidget.html
@@ -1,4 +1,7 @@
-<button class="button chat-tab ss-chat js-toggle-chat" ng-init="showChatWidget = false" ng-click="showChatWidget = !showChatWidget">Chat with us</button>
+<button class="button chat-tab ss-chat js-toggle-chat" ng-init="showChatWidget = false" ng-click="showChatWidget = !showChatWidget">
+  <md-icon id="chat_widget_icon" md-svg-src="custom/NYU-NUI/img/icons/ic_chat_bubble_outline_white_18px.svg" aria-label="chat_widget"></md-icon>
+  Chat with us
+</button>
 <div class="chat-frame-wrap" ng-show="showChatWidget">
   <button class="chat-close ss-icon js-toggle-chat" title="Close chat window" ng-click="showChatWidget = !showChatWidget">&times;</button>
   <iframe class="chat-frame" src="https://us.libraryh3lp.com/chat/askbobst@chat.libraryh3lp.com?skin=23106" frameborder="0"></iframe>
