Change chatWidget icon to use prm-icon

--- a/html/chatWidget.html
+++ b/html/chatWidget.html
@@ -1,5 +1,5 @@
 <button class="button chat-tab ss-chat js-toggle-chat" ng-init="showChatWidget = false" ng-click="showChatWidget = !showChatWidget">
-  <md-icon id="chat_widget_icon" md-svg-src="custom/NYU-NUI/img/icons/ic_chat_bubble_outline_white_18px.svg" aria-label="chat_widget"></md-icon>
+  <prm-icon style="z-index:1" icon-type="svg" svg-icon-set="communication" icon-definition="ic_chat_24px"></prm-icon>
   Chat with us
 </button>
 <div class="chat-frame-wrap" ng-show="showChatWidget">
